2007-05-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* optman/sapi/no-io.c: Split IO Manager into one function per file so
	now we only need required initialization methods.

2007-05-29	Joel Sherrill <joel.sherrill@OARcorp.com>

	* optman/sapi/no-io.c: Eliminate maximum_drivers configuration
	parameter since it was used to configure a no longer used feature.
	Device names are now part of the filesystem not in a table.

2007-05-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* optman/Makefile.am, optman/preinstall.am, optman/rtems/no-dpmem.c,
	optman/rtems/no-event.c, optman/rtems/no-mp.c, optman/rtems/no-msg.c,
	optman/rtems/no-part.c, optman/rtems/no-region.c,
	optman/rtems/no-rtmon.c, optman/rtems/no-sem.c,
	optman/rtems/no-signal.c, optman/rtems/no-timer.c,
	optman/sapi/no-ext.c: Add optional manager stub for Barrier. Simplify
	other optional managers so using them reduces application size
	instead of increasing it.
	* optman/rtems/no-barrier.c: New file.

2007-04-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/dec21140.c, libchip/network/elnk.c: i386-specific
	adjustments to pci-API changes.
	* libchip/network/dec21140.c, libchip/network/elnk.c, 
	libchip/network/if_dc.c: powerpc-specific adjustments to pci-API
	changes.

2007-03-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/dec21140.c, libchip/network/if_dc.c,
	libchip/network/if_fxp.c: Reflect changes to pci-API.

2007-03-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/network/elnk.c: Use ioctl_command_t as ioctl argument.
	* libchip/network/if_dc.c: Use ioctl_command_t as ioctl argument.

2007-03-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/target.m4: Strip CFLAGS (Hack to prevent bsp-cflags from
	  being used to compile "tools").

2007-03-13	Joel Sherrill <joel@OARcorp.com>

	* libchip/network/sonic.c: Rename Dump_Buffer to rtems_print_buffer.

2007-03-12	Joel Sherrill <joel@OARcorp.com>

	* libchip/network/cs8900.c, libchip/network/cs8900.h,